[gd_scene load_steps=66 format=3 uid="uid://bkam2bdf3y0ig"]

[ext_resource type="Script" path="res://Scripts/CharacterBody2D.gd" id="1_cjoav"]
[ext_resource type="Script" path="res://Scripts/MC/MaxGrapplingRange.gd" id="2_2taa3"]
[ext_resource type="Script" path="res://Scripts/MC/Head.gd" id="3_ab1od"]
[ext_resource type="Texture2D" uid="uid://bbg4cfp21a8ou" path="res://Assets/Sprites/Oriana_Evans_Rope.png" id="4_ekxcq"]
[ext_resource type="Script" path="res://Scripts/MC/DamageCollision.gd" id="4_ki1l8"]
[ext_resource type="Texture2D" uid="uid://cbdsflgsh2pkp" path="res://Assets/Sprites/MC Animations/Hang.png" id="4_mxrui"]
[ext_resource type="Texture2D" uid="uid://ssjayeubca24" path="res://Assets/Sprites/MC Animations/JumpAim_Left.png" id="4_pno48"]
[ext_resource type="Texture2D" uid="uid://gr75qj1l030l" path="res://Assets/Sprites/MC Animations/Mantling.png" id="4_qy8sh"]
[ext_resource type="Texture2D" uid="uid://b1xpp1heheveo" path="res://Assets/Sprites/MC Animations/Idle_Left.png" id="5_6cari"]
[ext_resource type="Texture2D" uid="uid://djohfhqtln0f5" path="res://Assets/Sprites/MC Animations/Hang_Left.png" id="5_wxmkb"]
[ext_resource type="Texture2D" uid="uid://dcjhc0blyrvnf" path="res://Assets/Sprites/MC Animations/IdleAim.png" id="6_f7sye"]
[ext_resource type="Texture2D" uid="uid://cyi7o0l2hrlev" path="res://Assets/Sprites/MC Animations/RunningAim_Left.png" id="6_h0476"]
[ext_resource type="Texture2D" uid="uid://bposq7ccc2wdp" path="res://Assets/Sprites/MC Animations/JumpAim.png" id="7_4hi78"]
[ext_resource type="Texture2D" uid="uid://65u5f6kv35d7" path="res://Assets/Sprites/MC Animations/RunningAim.png" id="9_h2gw4"]
[ext_resource type="Texture2D" uid="uid://d21rfx17natuj" path="res://Assets/Sprites/MC Animations/Arm.png" id="9_vrk3f"]
[ext_resource type="Script" path="res://Scripts/MC/Animations.gd" id="10_xc0nu"]
[ext_resource type="Script" path="res://Scripts/MC/Mouse_Follower.gd" id="12_bl1ec"]
[ext_resource type="Script" path="res://Scripts/MC/HookPath.gd" id="12_kslgm"]
[ext_resource type="Script" path="res://Scripts/MC/Mantle_Checker.gd" id="14_d260u"]


[sub_resource type="AtlasTexture" id="AtlasTexture_hgi3h"]
atlas = ExtResource("4_pno48")
region = Rect2(64, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4sjb"]
atlas = ExtResource("4_pno48")
region = Rect2(96, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tf02"]
atlas = ExtResource("5_wxmkb")
region = Rect2(0, 0, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f7yr"]
atlas = ExtResource("5_wxmkb")
region = Rect2(32, 0, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5d1e"]
atlas = ExtResource("5_wxmkb")
region = Rect2(64, 0, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_illke"]
atlas = ExtResource("5_wxmkb")
region = Rect2(96, 0, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_11sq2"]
atlas = ExtResource("5_wxmkb")
region = Rect2(128, 0, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o80k"]
atlas = ExtResource("5_6cari")
region = Rect2(0, 6, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1loj"]
atlas = ExtResource("4_pno48")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx43t"]
atlas = ExtResource("4_pno48")
region = Rect2(32, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqmys"]
atlas = ExtResource("6_h0476")
region = Rect2(3, 0, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxqi3"]
atlas = ExtResource("6_h0476")
region = Rect2(32, 0, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytben"]
atlas = ExtResource("6_h0476")
region = Rect2(61, 0, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qodcl"]
atlas = ExtResource("6_h0476")
region = Rect2(90, 0, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckunt"]
atlas = ExtResource("6_h0476")
region = Rect2(119, 0, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tnxl"]
atlas = ExtResource("6_h0476")
region = Rect2(148, 0, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb7dv"]
atlas = ExtResource("6_h0476")
region = Rect2(177, 0, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfcni"]
atlas = ExtResource("6_h0476")
region = Rect2(206, 0, 29, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8awh"]
atlas = ExtResource("7_4hi78")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_54jxd"]
atlas = ExtResource("7_4hi78")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvcmv"]
atlas = ExtResource("4_mxrui")
region = Rect2(0, 0, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d37g"]
atlas = ExtResource("4_mxrui")
region = Rect2(32, 0, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ut3w2"]
atlas = ExtResource("4_mxrui")
region = Rect2(64, 0, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4qag"]
atlas = ExtResource("4_mxrui")
region = Rect2(96, 0, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsns0"]
atlas = ExtResource("4_mxrui")
region = Rect2(128, 0, 32, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj8qe"]
atlas = ExtResource("6_f7sye")
region = Rect2(0, 6, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg8su"]
atlas = ExtResource("7_4hi78")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr0ge"]
atlas = ExtResource("7_4hi78")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsgcc"]
atlas = ExtResource("4_qy8sh")
region = Rect2(0, 0, 27, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_71j8m"]
atlas = ExtResource("4_qy8sh")
region = Rect2(30, 0, 27, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fmfa"]
atlas = ExtResource("4_qy8sh")
region = Rect2(60, 0, 27, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c0cx"]
atlas = ExtResource("4_qy8sh")
region = Rect2(90, 0, 27, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_frnkp"]
atlas = ExtResource("9_h2gw4")
region = Rect2(1, 0, 29, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5k26"]
atlas = ExtResource("9_h2gw4")
region = Rect2(30, 0, 29, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq707"]
atlas = ExtResource("9_h2gw4")
region = Rect2(59, 0, 29, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3wr8"]
atlas = ExtResource("9_h2gw4")
region = Rect2(88, 0, 29, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4f5h"]
atlas = ExtResource("9_h2gw4")
region = Rect2(117, 0, 29, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_um511"]
atlas = ExtResource("9_h2gw4")
region = Rect2(146, 0, 29, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3tld"]
atlas = ExtResource("9_h2gw4")
region = Rect2(175, 0, 29, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqhqn"]
atlas = ExtResource("9_h2gw4")
region = Rect2(204, 0, 29, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_g51n2"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_hgi3h")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_d4sjb")
}],
"loop": true,
"name": &"left_fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tf02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f7yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5d1e")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_illke")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_11sq2")
}],
"loop": true,
"name": &"left_hanging",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o80k")
}],
"loop": true,
"name": &"left_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_y1loj")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_fx43t")
}],
"loop": true,
"name": &"left_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqmys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxqi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytben")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qodcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckunt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tnxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb7dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfcni")
}],
"loop": true,
"name": &"left_running",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_r8awh")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_54jxd")
}],
"loop": true,
"name": &"right_fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvcmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d37g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ut3w2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_o4qag")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wsns0")
}],
"loop": false,
"name": &"right_hanging",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj8qe")
}],
"loop": true,
"name": &"right_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_wg8su")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_nr0ge")
}],
"loop": true,
"name": &"right_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_wsgcc")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_71j8m")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_7fmfa")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_8c0cx")
}],
"loop": false,
"name": &"right_mantling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_frnkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5k26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq707")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3wr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4f5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um511")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3tld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqhqn")
}],
"loop": true,
"name": &"right_running",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tplrn"]
radius = 12.0
height = 31.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wnib2"]
radius = 128.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_oyj74"]
a = Vector2(-7, -16)
b = Vector2(7, -16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ctim5"]
radius = 9.39948
height = 34.6523

[sub_resource type="CircleShape2D" id="CircleShape2D_pjb5h"]
radius = 16.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(16, -16)
script = ExtResource("1_cjoav")

[node name="Rope" type="Line2D" parent="."]
width = 32.0
texture = ExtResource("4_ekxcq")
texture_mode = 1
joint_mode = 2

[node name="HookPath" type="Line2D" parent="."]
default_color = Color(1, 1, 0, 0.290196)
script = ExtResource("12_kslgm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1, 1.032)
sprite_frames = SubResource("SpriteFrames_g51n2")
animation = &"left_fall"
speed_scale = 2.0
script = ExtResource("10_xc0nu")

[node name="Node2D" type="Node2D" parent="AnimatedSprite2D"]
position = Vector2(2, -4.5)

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D/Node2D"]
position = Vector2(4.5, 0)
rotation = -1.5708
texture = ExtResource("9_vrk3f")

[node name="jumpBufferingCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 32)

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("CapsuleShape2D_tplrn")

[node name="MaxGrapplingRange" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_2taa3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MaxGrapplingRange"]
position = Vector2(0, -0.5)
shape = SubResource("CircleShape2D_wnib2")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Polygon2D" type="Polygon2D" parent="MaxGrapplingRange"]
visible = false
z_index = -1
color = Color(1, 1, 0, 0.258824)
polygon = PackedVector2Array(0, -128, 35, -123, 66, -110, 91, -90, 110, -67, 123, -35, 127, -2, 123, 30, 112, 64, 92, 90, 63, 109, 34, 123, 1, 129, -32, 123, -63, 110, -90, 91, -111, 65, -124, 31, -128, -1, -122, -38, -112, -67, -90, -93, -65, -111, -29, -126)

[node name="Head" type="Area2D" parent="."]
script = ExtResource("3_ab1od")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource("SegmentShape2D_oyj74")

[node name="DamageCollision" type="Area2D" parent="."]
scale = Vector2(1.48, 1)
script = ExtResource("4_ki1l8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageCollision"]
position = Vector2(0.0198936, 0.028492)
shape = SubResource("CapsuleShape2D_ctim5")

[node name="Aim_Assist" type="Area2D" parent="." groups=["Mouse"]]
position = Vector2(3, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("12_bl1ec")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aim_Assist"]
position = Vector2(-2, -1)
shape = SubResource("CircleShape2D_pjb5h")

[node name="Mantle_Checker" type="Node2D" parent="."]
script = ExtResource("14_d260u")

[node name="checkWallLeft" type="RayCast2D" parent="Mantle_Checker"]
position = Vector2(-5, 1)
target_position = Vector2(-9, 0)
collision_mask = 32768

[node name="checkWallUp" type="RayCast2D" parent="Mantle_Checker"]
position = Vector2(1, -13)
target_position = Vector2(14, 0)
collision_mask = 32768

[node name="checkWall" type="RayCast2D" parent="Mantle_Checker"]
position = Vector2(5, 1)
target_position = Vector2(9, 0)
collision_mask = 32768

[node name="checkWallUpLeft" type="RayCast2D" parent="Mantle_Checker"]
position = Vector2(-1, -13)
target_position = Vector2(-14, 0)
collision_mask = 32768

[connection signal="area_exited" from="MaxGrapplingRange" to="." method="_on_max_grappling_range_area_exited"]
[connection signal="body_entered" from="Head" to="Head" method="_on_body_entered"]
[connection signal="body_shape_entered" from="DamageCollision" to="DamageCollision" method="_on_damage_collision_body_shape_entered"]
[connection signal="body_shape_exited" from="DamageCollision" to="DamageCollision" method="_on_damage_collision_body_shape_exited"]
[connection signal="body_shape_entered" from="Aim_Assist" to="Aim_Assist" method="_on_mouse_follower_body_shape_entered"]
